# SeedVR

./: MANIFEST.in  README.md  pyproject.toml  readme.md  requirements.txt  test.py  test.sh
configs_7b/: main.yaml
models/dit/blocks/: mmdit_window_block.py
models/dit/nablocks/: mmsr_block.py
models/video_vae_v3/modules/: causal_inflation_lib.py  video_vae.py
seedvr/: __init__.py  pipeline.py
seedvr/common/: cache.py  config.py  decorators.py  half_precision_fixes.py  logger.py  partition.py  seed.py  utils.py
seedvr/common/diffusion/: __init__.py  config.py  utils.py
seedvr/common/diffusion/samplers/: base.py  euler.py
seedvr/common/diffusion/schedules/: base.py  lerp.py
seedvr/common/diffusion/timesteps/: base.py
seedvr/common/diffusion/timesteps/sampling/: trailing.py
seedvr/common/distributed/: advanced.py  basic.py  ops.py
seedvr/data/: __init__.py
seedvr/data/image/transforms/: area_resize.py  divisible_crop.py  na_resize.py  side_resize.py
seedvr/models/: embeds.py  utils.py
seedvr/models/dit/: attention.py  embedding.py  mlp.py  mm.py  modulation.py  nadit.py  normalization.py  patch.py  rope.py  window.py
seedvr/models/dit/blocks/: mmdit_window_block.py
seedvr/models/dit/nablocks/: mmsr_block.py
seedvr/models/dit_v2/: attention.py  mm.py  modulation.py  na.py  nadit.py  normalization.py  rope.py
seedvr/models/dit_v2/nablocks/: mmsr_block.py
seedvr/models/dit_v2/nablocks/attention/: mmattn.py
seedvr/models/dit_v2/patch/: patch_v1.py
seedvr/models/video_vae_v3/: s8_c16_t4_inflation_sd3.yaml
seedvr/models/video_vae_v3/modules/: attn_video_vae.py  causal_inflation_lib.py  context_parallel_lib.py  global_config.py  inflated_layers.py  inflated_lib.py  types.py  video_vae.py
seedvr/projects/: inference_seedvr2_3b.py  inference_seedvr2_7b.py  inference_seedvr_3b.py  inference_seedvr_7b.py
seedvr/projects/video_diffusion_sr/: color_fix.py  infer.py  utils.py
